index.css
/* Support older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

* {
  padding: 0;
  margin: 0;
}

ul,
a,
li {
  list-style-type: none;
  text-decoration: none;
}

body {
  background-color: #f7f7f9;
  position: relative;
}

/* Typography */
body,
h1,
h2,
h6,
input,
textarea,
p {
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  padding: 0;
  margin: 0;
}

.header-1 {
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.header-2 {
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.header-3 {
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
}

.body-1 {
  font-size: 20px;
  line-height: 24px;
}

.body-2 {
  font-size: 16px;
  line-height: 24px;
  font-weight: normal;
}

.body-3 {
  font-size: 15px;
  line-height: 24px;
}

.body-4 {
  font-size: 20px;
  line-height: 28px;
  font-weight: normal;
  font-style: normal;
}

.bolder {
  font-weight: 500;
}

.bolder-2 {
  font-weight: 600;
}

.caption {
  font-size: 13px;
  line-height: 16px;
}

.small {
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
}

.fw-600 {
  font-weight: 600;
}

/* Colors */
.color-b300 {
  color: #7f8cff;
}

.color-b400 {
  color: #6070ff;
}

.color-n0 {
  color: #fff;
}

.color-n100 {
  color: #7a869a;
}

.color-n600 {
  color: #344563;
}

.color-n700 {
  color: #253858;
}

.color-n800 {
  color: #172b4d;
}

.color-black {
  color: #000;
}

.bg-n0 {
  background-color: #fff;
}

.bg-b400 {
  background-color: #6070ff;
}

.drop-shadow {
  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
}

.elevate-header {
  filter: drop-shadow(0 0 16px rgba(64, 83, 252, 0.24));
}

/* Layout */
.app-bar {
  height: 48px;
  position: fixed;
  width: 100%;
  z-index: 2;
  display: flex;
  align-items: center;
  top: 0;
}

.logo {
  height: 40px;
  display: flex;
  align-items: center;
  margin-left: 24px;
  transition: transform 500ms ease 2s;
  transform: rotate(360deg);
}

.navbar {
  display: flex;
  flex-grow: 2;
  justify-content: flex-end;
}

.nav-link:hover {
  color: #7f8cff;
}

.active {
  color: #6070ff;
}

.menu-button {
  margin-right: 12px;
}

.icon-button {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  width: 40px;
  height: 40px;
}

.menu-items a {
  text-decoration: none;
}

.menu-items {
  display: none;
  gap: 32px;
}

.button {
  display: flex;
  align-items: center;
  padding: 12px;
  height: 48px;
  background-color: #fff;
  color: #6070ff;
  border: 1px solid #7f8cff;
  box-sizing: border-box;
  text-decoration: none;
  border-radius: 8px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
  transition-property: background-color, color;
  transition-duration: 500ms;
}

.button:hover {
  background-color: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
  color: #fff;
  cursor: pointer;
}

.link-button {
  border: 0 none;
  text-decoration: none;
}

.button:active {
  background-color: #2230d2;
  color: #fff;
}

.button:disabled {
  border: 1px solid #c1c7d0;
  box-sizing: border-box;
}

.button:enabled {
  border: 1px solid #7f8cff;
  box-sizing: border-box;
}

.headline {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 40% 24px;
  margin-top: 48px;
  border-bottom-left-radius: 80px;
  background-image: url(images/headline-background-image.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top right;
}

.about-container {
  display: flex;
  flex-direction: column;
  padding: 40% 24px;
  background-repeat: no-repeat;
  background-size: cover;
  border-top-right-radius: 80px;
}

.about {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.social-media-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  flex-wrap: wrap;
}

.social-media-icons.li {
  height: 20px;
}

.social-icon {
  width: 20px;
  height: 20px;
}

.tags,
.frame-2 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 8px;
  margin-bottom: 20px;
}

.tag {
  border-radius: 8px;
  background-color: #ebebff;
  padding: 4px 12px;
}

.action {
  padding-top: 4px;
  padding-bottom: 12px;
}

.works {
  display: grid;
  justify-content: center;
  grid-row-gap: 88px;
  padding: 114px 24px;
  background-color: transparent;
}

.card {
  background-color: #fff;
  border: 1px solid #dfe1e6;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
}

.snapshot {
  border-radius: 8px;
  width: 100%;
  transition: transform 1s;
}

.snapshot:hover {
  transform: scale(1.03);
}

.skill-list {
  display: flex;
  flex-direction: column;
  margin: 24px 0;
}

.skill-list > li + li {
  border-bottom: solid 1px #dfe1e6;
}

.skill-item {
  display: flex;
  align-items: center;
  background-color: #f7f7f9;
  border-radius: 8px;
  margin: 12px 0;
  padding: 9px 12px;
}

.list-header {
  display: flex;
  align-items: center;
  padding: 24px 12px;
}

.separator {
  height: 1px;
  background-color: #dfe1e6;
}

.contact-me {
  background-image: url(images/contact-form-shapes-mobile.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: bottom right;
  padding: 82px 24px 45px 24px;
  border-top-left-radius: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

form {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-top: 50px;
  gap: 20px;
}

.text-field {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  background-color: #fff;
  padding: 15px 38px 15px 16px;
  font-size: 17px;
  line-height: 20px;
  color: #172b4d;
  resize: none;
  transition: padding 0.9s;
}

.text-field:hover {
  padding-left: 6px;
}

.align-center {
  text-align: center;
}

.mobile-menu {
  display: none;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 3;
  mix-blend-mode: multiply;
}

.open-menu {
  display: block;
}

.menu-overlay {
  filter: blur(16px);
}

.mobile-menu .app-bar {
  justify-content: flex-end;
}

.expand-nav {
  margin-top: 48px;
  padding: 0 28px;
  display: flex;
  flex-direction: column;
}

/* Spacing */
.mb-12 {
  margin-bottom: 12px;
}

.mb-40 {
  margin-bottom: 40px;
}

.p-16 {
  padding: 16px;
}

.p-12 {
  padding: 12px;
}

.flex-text {
  display: flex;
  flex-grow: 1;
}

/* Large screen devices */
@media screen and (min-width: 992px) {
  .header-1 {
    font-size: 48px;
    line-height: 60px;
    font-weight: bold;
  }

  .open-menu {
    display: none;
  }

  .menu-overlay {
    filter: none;
  }

  .menu-button,
  .mobile-menu {
    display: none;
  }

  .menu-items {
    display: flex;
  }

  .logo {
    margin-left: 10%;
  }

  .navbar {
    margin-right: 10%;
  }

  .headline {
    padding: 20% 25%;
    background-image: url(images/header-shapes-desktop.svg);
    background-position: center;
    background-size: contain;
    animation-name: animateHeadline;
    animation-duration: 2s;
    border-bottom-left-radius: 160px;
  }

  @keyframes animateHeadline {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  .contact-me {
    padding: 10% 25%;
    border-top-left-radius: 160px;
    background-image: url(images/contact-form-background-shapes.svg);
  }

  form {
    width: 80%;
  }

  .text-field {
    border-radius: 2px;
  }

  .action-button {
    display: flex;
    justify-content: center;
  }

  .snapshot {
    width: 544px;
    height: 448px;
  }

  .card {
    display: grid;
    grid-template-columns: auto auto;
    padding: 24px;
    justify-content: center;
  }

  .card-body {
    padding: 0 24px 0 24px;
    display: flex;
    flex-direction: column;
  }

  .works {
    gap: 142px;
    margin-left: 5%;
    margin-right: 5%;
  }

  .about-container {
    border-top-right-radius: 160px;
    flex-direction: row;
    justify-content: center;
    padding: 142px;
    gap: 37px;
  }

  .about {
    gap: 12px;
    width: 100%;
    margin-top: 12px;
  }

  .skill-list {
    width: 100%;
    margin: 4px;
  }

  .skill-items {
    display: flex;
    flex-direction: row;
    gap: 20px;
  }

  .skill-item {
    flex-direction: column;
    width: 100%;
  }

  .swap {
    order: -1;
  }

  .frame-2,
  .tags {
    margin-bottom: 32px;
  }
}

